# datamize-server

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  compose.yaml  deny.toml  sqlx-data.json
budget-data-api/: .env  Cargo.toml
budget-data-api/migrations/: 20230110141755_create_scheduled_transactions_table.sql
budget-data-api/scripts/: init_db.sh
budget-data-api/src/: error.rs  lib.rs
budget-data-api/src/config/: config_builder.rs  mod.rs  types.rs
budget-data-api/src/data_builder/: budget_details.rs  common_expanses.rs  common_expenses.rs  mod.rs  transactions_distribution.rs  types.rs  utils.rs
budget-data-api/src/web_scraper/: mod.rs
crates/datamize-cli/: Cargo.toml
crates/datamize-cli/src/: main.rs
crates/datamize-domain/: Cargo.toml
crates/datamize-domain/src/: lib.rs
crates/datamize-server/: .env  Cargo.toml  package-lock.json  package.json  tailwind.config.js
crates/datamize-server/.sqlx/: query-037a8ea467a5e1af6598e5195ac0e1231c940dd7a5f2f056588b7cfc39c4a78b.json  query-05ce386b0f775d2468bbf415a882e1ed3e4d2b7a4eb3b2335490e65042073353.json  query-0d4495bc8d34dd4d3eaa3dba5d8785f5a2f29da2878eace0a8c73573adb6fa1d.json  query-2453cf0c6f0f9cdef78528e7b561e35f28a4d52040f1f433d8ecc36cb4f1a826.json  query-25249f87319be4ff83c86816f85a66d9f9c3405a28f53b9d8bfa6327c5fe8606.json  query-2629b7de8a34bb24f70658f9dafa39ebaf79692228936c2f13f0e19a6859901d.json  query-26ebce575710f5aa0f2f03d8ebcd06b49ef2beb2fd748f6b301d79e7f9abc63d.json  query-297d8f65b2decda8b04ccfcaa4e6a6371b999eddad43bf94da28fb700acf92f5.json  query-32d4efd235af1ccb12ec09a50be38e5e4b87f6ee39a84af7a6b880572cc15d2c.json  query-376e6cf7076d7b9758a34a61991fb7ed617ffca63faae2691744861a7fd2a5bc.json  query-3c54e3cead10a67754f91e21046c5bb1f149c7db7b72bab7a094425161c320b5.json  query-528d5a81e502938a14dcfa090796416834589a3bdad8799b1862b990acc64016.json  query-615f49c7b1ba911e89db5eddd923ff69b74c914f44d4b17b682faa4de50127d9.json  query-6c8434ae3bf0d9b76c3e27fa6062e4606edd7835cc4874ee49ae9d5a9c76b76b.json  query-7563423722a5ad6a797bad504993c6992a4d2d104454936755016e9944b6f7e0.json  query-79910499e64686833664111f8624c41467cd4682bf021f5b89ca3c505379afd5.json  query-7ed096b7f6c3132c07a7e19a5972850edb6356a57e2f7430fdfe927a6bf11321.json  query-80c2dbb5a4fcb5db00b9edb529b33e0600c12a8ed4261571abf0961cf93cff8c.json  query-86966bcac12841775e43141ad811898a8f12929fc0b505eaec357cab2b0e1c20.json  query-877f788654649a07b7b95de02c0b137cbf9058e1f4d458b47631f8718c820091.json  query-8d6c67606dbf8ab284b481a76f04e96d4cab66affb139b205d3fa51aeb34b865.json  query-939eeb2d1175eb16f4ac02cce9666ea172550b16e735e416bb18b578db61b8cc.json  query-a1d8626079560a1bd8b59b9fc3a30416ceaf8a0e19b6cf267b9cbfc881963966.json  query-a2bc4f218c357efa941c4dfec36b9eaa7c60618e8ce36586a22dff532c69c931.json  query-a3bd53bbc4906509fceec33bfcfe1c09622040d2a8cf5f5b39d704f305cca458.json  query-a992e782347a6abfa56a9aede31a2761fc94335f26268bccba2094bded445a4e.json  query-baf99c900b72bb98fa78f8225978226711ebc426c74d7f2eb4e4561c644e4c25.json  query-bbbbc90732167008abb5075a99eddc39f2e1214e31d6aee0a9462ed8ec6b203b.json  query-c06dde4b1d386c7232069a4be79f1b980607cc505f04e103fe76d6907e32b801.json  query-c25add30c2b92692fd3ed794112f83979a98791af8c48d62afd827e6a26ee370.json  query-c3785234edfced6d7a607e7dfd66151b321b31ae9b2fa6ff17e58ab297f7564b.json  query-c3aacbf1c6a4009c0bed5d0463c908af42dcc3758dcd667667bf2254bc604a8a.json  query-c6ecba06cb16a16972776bb018fd0ef8c4f2266b9165eb52e85a8f6538cb40b0.json  query-ca1e4d42672da5123af5aff4590748c9730ae9a1e8c3d3b52a828771a514ad93.json  query-d8b7226d6a127cc907e100ef3306d8156267ff0252f2648e023edf02ffd8c579.json  query-dac7664830e70bfab4919af300bf6e25e36e05c18afb63e1f376217d07b9fb43.json  query-e2578551bce380033a5678f98c0f4a339eae23dbfe3646cb667a6f65ab3fdd47.json
crates/datamize-server/assets/: main.css
crates/datamize-server/configuration/: base.toml  production.toml  staging.toml
crates/datamize-server/migrations/: 20230301022958_create_balance_sheet_resources_table.sql  20230414160728_create_external_accounts_table.sql  20230718144159_create_expenses_categorization_table.sql  20230922173356_create_transactions_table.sql
crates/datamize-server/src/: config.rs  error.rs  lib.rs  main.rs  startup.rs
crates/datamize-server/styles/: tailwind.css
crates/db-postgres/: Cargo.toml
crates/db-postgres/.sqlx/: query-0ca4c9955867e274783edc15034361f1e3853f742e3547586dd531658ec1a271.json  query-0de0353d9e37069e14666379a48244454db502c4da7a6623609989057a728408.json  query-0ebfebf9d398d7857cf0284e5f9beae67d7bd6c84f4e23a0abd02e3f3eb8681d.json  query-0ecb666228dee916b54a290fd2bb39de652ced34641b7d489ccab9a719b21677.json  query-110aadc9d9dd829d837fa253b881a831502ed07a68fa714d4e1136913d1062cf.json  query-16805039afedcab31086399e0294cc7ffb1975f7b2ec7e8784eb0bf277717137.json  query-18e49ae41a0c883465631fe63e356d673125c8a04390e0421eb0ad5db8f5a61b.json  query-197b06a0a33beaabb36ca2a621b43fc7f6990751b53540301f0b9d066f464c58.json  query-198bf8a1ce3a12fae2f1e4c5b588537d91078cade397edb47821252b2bfdc974.json  query-1a9f4cf048d24aabfcf4576c3cd7f5dadf0a8fec40e2874b565b131f3c0a53ee.json  query-1b50609ae4d8d4acdb6557c1634f3928ad72571cf14d9088fc4001a247a99a6d.json  query-1c6b412ac45513cef51f59ed7918466b1639adacf0510b9ec22d56bf9645f8b8.json  query-200c9ed13aed8e67ac7e7a957d374c0ec2d3acbc2900ef1e0ed26fe40abb4cf0.json  query-259f3a37d7694ebc331064aca7d594254cc0fe855280a09e25260bf03ad032a8.json  query-26c7c58e712b7995f36cfa3633b1faac2a9462faea4a897583213cb0925344b2.json  query-2bdc7d86df04db08996e3ad4ab7289ecfbe950e80b45b517cb19cdadbd92fd15.json  query-2e04cb8e0284ce66e671695cb4c94e2b4370ae2795154d0003c25a462e741f29.json  query-35d904ede0a29ade6369bab6a009e287b230bd9f17317261d08cde649f2501e1.json  query-42a4981d4ed8e2fd025cc14fc3ddade3c6bd5d573f0c10957d4a1f22d83be59d.json  (+67 more)
crates/db-postgres/src/: lib.rs  user.rs
crates/db-redis/: Cargo.toml
crates/db-sqlite/: .env  Cargo.toml
crates/ynab/: Cargo.toml
datamize-cli/: Cargo.toml
datamize-cli/src/: main.rs
ynab/: Cargo.toml
ynab/src/: client.rs  error.rs  lib.rs  types.rs
(+965 files in other folders)
