[package]
name = "budget-data-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
# local modules
ynab = { path = "../ynab", features = ["sqlx-postgres"] }

reqwest = { version = "0.11.12", features = ["cookies", "json"] }
scraper = "0.13.0"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
figment = { version = "0.10.7", features = ["env", "toml"] }
thiserror = "1.0.38"
uuid = { workspace = true }
rrule = { workspace = true }
