[package]
name = "datamize-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datamize = { path = "../" }
anyhow = "1.0.70"
clap = { version = "4.2.3", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.27.0", features = ["full"] }
orion = "0.17.4"
uuid = { workspace = true }
secrecy = "0.8.0"
redis = { version = "0.22.2", features = ["tokio-comp", "r2d2"] }
sqlx = { version = "0.6.2", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
