[package]
name = "datamize-cli"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datamize = { path = "../" }
anyhow = { workspace = true }
clap = { version = "^4.3.11", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
orion = { workspace = true }
uuid = { workspace = true }
