[package]
name = "datamize-cli"
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local Deps
datamize-server.workspace = true
datamize-domain.workspace = true
db-postgres.workspace = true
db-redis.workspace = true

# Non-Local Deps
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
orion.workspace = true
clap = { version = "^4.3.11", features = ["derive"] }

