[package]
name = "datamize-domain"
version = "0.1.0"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
doctest = false

[features]
default = []
testutils = ["dep:mockall", "dep:fake", "dep:rand"]

[dependencies]
# Local Deps
ynab.workspace = true

# Non-Local Deps
async-trait.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
rrule.workspace = true
fred.workspace = true
axum-login.workspace = true

serde_repr = "^0.1.14"
secrecy = { version = "0.8.0", features = ["serde"] }
rayon = "1.8"

mockall = { version = "0.12", optional = true }
fake = { version = "^2.9", optional = true, features = [
  "chrono",
  "derive",
  "uuid",
] }
rand = { version = "^0.8", optional = true }

[dev-dependencies]
# Local Deps
ynab = { workspace = true, features = ["testutils"] }

fake = { version = "^2.9", features = ["chrono", "derive", "uuid"] }
mockall = "0.12"
pretty_assertions = "^1.4"
rand = "^0.8"
