[package]
name = "datamize-server"
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
name = "datamize-server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local Deps
datamize-domain.workspace = true
db-postgres.workspace = true
db-redis.workspace = true
ynab.workspace = true

# Non-Local Deps
anyhow.workspace = true
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
futures.workspace = true
orion.workspace = true
thiserror.workspace = true
dyn-clone.workspace = true
sqlx = { workspace = true, features = ["postgres"] } # TODO: Remove this unnecessary dependency by moving usage of types.

axum = "0.6"
axum-extra = "^0.7.4"
tower = "0.4.13"
tower-request-id = "0.2.1"
tower-http = { version = "^0.4.1", features = ["trace", "cors"] }
http = "0.2.9"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "registry"] }
tracing-log = "0.1.3"
config = { version = "0.13.3", features = ["toml"], default-features = false }
num-traits = "0.2.15"
fantoccini = { version = "0.19.3", features = ["rustls-tls"] }
nom = "7.1.3"


[dev-dependencies]
# Local Deps
datamize-domain = { workspace = true, features = ["testutils"] }
ynab = { workspace = true, features = ["testutils"] }
db-sqlite.workspace = true

# Non-Local Deps
fake = { version = "^2.6.1", features = ["chrono", "derive", "uuid"] }
once_cell = "1.18"
rand = "^0.8.5"
reqwest = { version = "^0.11.18", default-features = false, features = ["json", "cookies", "rustls-tls"] }
wiremock = "^0.5.19"
mockall = "0.11.4"
hyper = { version = "0.14", features = ["full"] }
serde_repr = "^0.1.14"
sqlx = { workspace = true, features = ["sqlite"] } # TODO: Remove this unnecessary dependency by moving usage of types.
pretty_assertions = "^1.4"
