[package]
name = "datamize-server"
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
name = "datamize-server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local Deps
datamize-domain.workspace = true
db-postgres.workspace = true
db-redis.workspace = true
ynab.workspace = true

# Non-Local Deps
anyhow.workspace = true
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
futures.workspace = true
orion.workspace = true
thiserror.workspace = true
sqlx.workspace = true
itertools.workspace = true

axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["query", "form"] }
tower = "0.4"
tower-request-id = "0.3"
tower-http = { version = "^0.5", features = ["trace", "cors", "fs"] }
http = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-log = "0.2"
config = { version = "0.13", features = ["toml"], default-features = false }
num-traits = "0.2"
fantoccini = { version = "0.19", features = ["rustls-tls"] }
nom = "7.1"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4.0"
currency_rs = "1.3.0"


[dev-dependencies]
# Local Deps
datamize-domain = { workspace = true, features = ["testutils"] }
ynab = { workspace = true, features = ["testutils"] }
db-redis = { workspace = true, features = ["testutils"] }
db-sqlite.workspace = true

# Non-Local Deps
fake = { version = "^2.9", features = ["chrono", "derive", "uuid"] }
once_cell = "1.19"
rand = "^0.8"
reqwest = { version = "^0.11.18", default-features = false, features = ["json", "cookies", "rustls-tls"] }
wiremock = "^0.5.19"
mockall = "0.12"
hyper = { version = "1.1", features = ["full"] }
serde_repr = "^0.1.14"
pretty_assertions = "^1.4"
http-body-util = "0.1"
proptest = "1.0"
