[package]
name = "db-postgres"
version = "0.0.0"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local Deps
datamize-domain.workspace = true
ynab.workspace = true

# Non-Local Deps
sqlx = { workspace = true, features = ["postgres"] }
tracing.workspace = true
chrono.workspace = true
serde_json.workspace = true
futures.workspace = true

async-recursion = "^1.0.4"
