[package]
name = "db-redis"
version = "0.0.0"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
doctest = false

[features]
default = []
testutils = ["fred/mocks"]

[dependencies]
# Local Deps
datamize-domain.workspace = true

# Non-Local Deps
tracing.workspace = true
fred.workspace = true
serde_json.workspace = true

[dev-dependencies]
fred = { workspace = true, features = ["mocks"]}
