[package]
name = "db-sqlite"
version = "0.0.0"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
# Local Deps
datamize-domain.workspace = true
ynab.workspace = true

# Non-Local Deps
sqlx = { workspace = true, features = ["sqlite"] }
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
futures.workspace = true

async-recursion = "^1.0.4"
