[package]
name = "ynab"
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false # TODO: To revolve test failing.

[features]
# Postgres support through sqlx. Useful for transforming data from sqlx::Postgres into the exposed structs of this crate.
sqlx-postgres = ["dep:sqlx"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
rrule = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sqlx = { version = "^0.7.0", features = ["postgres", "uuid", "chrono", "json"], optional = true }
chrono = { workspace = true, features = ["serde"] }
async-trait.workspace = true

[dev-dependencies]
fake = { version = "^2.6.1", features = ["chrono", "derive", "uuid"] }
mockall = "0.11.4"
rand = "^0.8.5"
