[package]
name = "ynab"
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false # TODO: To revolve test failing.

[features]
default = []
# Postgres support through sqlx. Useful for transforming data from sqlx::Postgres into the exposed structs of this crate.
sqlx-postgres = ["dep:sqlx"]
testutils = ["dep:mockall", "dep:fake"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
rrule.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono = { workspace = true, features = ["serde"] }
async-trait.workspace = true
reqwest = { version = "^0.11.18", default-features = false, features = ["json", "cookies", "rustls-tls"] }
num-traits = "0.2"
url = "2.5"

sqlx = { workspace = true, features = ["postgres"], optional = true }
mockall = { version = "0.12", optional = true }
fake = { version = "^2.9", optional = true, features = ["chrono", "derive", "uuid"] }

[dev-dependencies]
fake = { version = "^2.9", features = ["chrono", "derive", "uuid"] }
mockall = "0.12"
